--- a/OptimizationAssistant.uplugin
+++ b/OptimizationAssistant.uplugin
@@ -14,11 +14,14 @@
 	"IsBetaVersion": false,
 	"IsExperimentalVersion": false,
 	"Installed": false,
+	"SupportedTargetPlatforms": [ "Win64" ],
 	"Modules": [
 		{
 			"Name": "OptimizationAssistant",
 			"Type": "Editor",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"WhitelistPlatforms": [ "Win64" ],
+			"BlacklistTargets": [ "Server" ]
 		}
 	]
 }
